<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="3dp"
    android:paddingBottom="12dp">

    <LinearLayout
        android:id="@+id/formulas_text_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/players_text"
        android:background="@color/text_background"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        >
            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="28sp"
                android:background="@color/text_background"/>

            <TextView
                android:id="@+id/running_count_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/running_count_formula_intro"
                android:textSize="18sp"
                android:background="@color/text_background"/>

            <TextView
                android:id="@+id/running_count_formula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="15sp"
                android:background="@color/text_background"/>

            <TextView
                android:id="@+id/true_count_formula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/true_count_intro"
                android:textSize="18sp"
                android:background="@color/text_background"/>

            <TextView
                android:id="@+id/true_count_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/true_count_example"
                android:textSize="15sp"
                android:paddingBottom="15sp"
                android:layout_marginTop="8dp"
                android:background="@color/text_background"/>
    </LinearLayout>

    <TextView
        android:id="@+id/players_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/formulas_text_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/player_spinner"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/players"
        android:textSize="22sp"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/player_spinner"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@+id/formulas_text_container"
        app:layout_constraintLeft_toRightOf="@id/players_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/deck_spinner"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@+id/player_spinner"
        app:layout_constraintLeft_toLeftOf="@id/player_spinner"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="200dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/decks_text"
        app:layout_constraintBottom_toTopOf="@+id/app_focus"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/play"
        android:backgroundTint="@color/button_background"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/decks_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/players_text"
        app:layout_constraintLeft_toLeftOf="@id/players_text"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="5dp"
        android:text="@string/decks"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/app_focus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/decks_text"
        app:layout_constraintBottom_toTopOf="@+id/chances"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/app_focus"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/chances"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/app_focus"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/chances"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/happy_counting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/happy_counting"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@+id/chances"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>